--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.3.0",
     "@astrojs/node": "^6.0.3",
     "@astrojs/tailwind": "^5.0.2",
+    "@astrojs/vercel": "^5.1.0",
     "astro": "^3.4.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
